Remove unused imports and clean logs
Unused imports and marked an unused variable.
Added m2e eclipse settings (other repos have this).
Added some test logback.xml to clear out jetty debug
messages.
Replaced deprecated newInstance with getDeclaredConstructor.
newInstance
Either log or throw Exception - chose throw
Added some assertions to JUnit test.

Issue-ID: POLICY-2305
Change-Id: Ia4e9ce62dc7fb45aea247d470ca7245e694fc26e
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>